--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -102,12 +102,8 @@
 <h3><span id=".D0.92.D1.8A.D0.BD.D1.88.D0.BD.D0.B8_.D1.80.D0.B0.D0.B1.D0.BE.D1.82.D0.BD.D0.B8_.D0.BC.D0.B0.D1.81.D0.B8"></span><span class="mw-headline" id="&#1042;&#1098;&#1085;&#1096;&#1085;&#1080;_&#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;_&#1084;&#1072;&#1089;&#1080;">&#1042;&#1098;&#1085;&#1096;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;</span></h3>
 <p>&#1050;&#1086;&#1075;&#1072;&#1090;&#1086; &#1084;&#1085;&#1086;&#1075;&#1086; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080; &#1080;&#1083;&#1080; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1080; &#1089;&#1072; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085;&#1080; &#1079;&#1072;&#1077;&#1076;&#1085;&#1086; &#1080; &#1089;&#1072; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1080; &#1074; &#1083;&#1077;&#1085;&#1090;&#1080; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1084;&#1077;&#1085;&#1102;&#1090;&#1072;, &#1090;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1087;&#1088;&#1077;&#1074;&#1098;&#1088;&#1085;&#1072;&#1090; &#1074; &#1085;&#1086;&#1074;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072;.
 </p><p><a href="../External_workbenches.html" title="External workbenches">External workbenches</a> &#1089;&#1072; &#1082;&#1086;&#1083;&#1077;&#1082;&#1094;&#1080;&#1080; &#1086;&#1090; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1085;&#1077; &#1089;&#1072; &#1095;&#1072;&#1089;&#1090; &#1086;&#1090; &#1073;&#1072;&#1079;&#1086;&#1074;&#1072;&#1090;&#1072; FreeCAD &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085;&#1072; &#1086;&#1090; &#1086;&#1087;&#1080;&#1090;&#1085;&#1080; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080;, &#1080; &#1085;&#1072;&#1089;&#1086;&#1095;&#1077;&#1085;&#1080; &#1082;&#1098;&#1084; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1085;&#1086;&#1089;&#1090;.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Since FreeCAD 0.17, many workbenches can be installed using the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. For manual installation see <a href="../How_to_install_additional_workbenches.html" title="How to install additional workbenches">How to install additional workbenches</a>.
-</p>
-</div>
-<p><span id="Reference"></span>
+</p><p>&#1054;&#1090; FreeCAD 0.17 &#1084;&#1085;&#1086;&#1075;&#1086; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1080; &#1089; &#1087;&#1086;&#1084;&#1086;&#1097;&#1090;&#1072; &#1085;&#1072; <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. &#1047;&#1072; &#1088;&#1098;&#1095;&#1085;&#1072; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../How_to_install_additional_workbenches.html" title="How to install additional workbenches">How to install additional workbenches</a>.
+</p><p><span id="Reference"></span>
 </p>
 <h2><span id=".D0.A1.D0.BF.D1.80.D0.B0.D0.B2.D0.BE.D1.87.D0.BD.D0.B8.D0.BA"></span><span class="mw-headline" id="&#1057;&#1087;&#1088;&#1072;&#1074;&#1086;&#1095;&#1085;&#1080;&#1082;">&#1057;&#1087;&#1088;&#1072;&#1074;&#1086;&#1095;&#1085;&#1080;&#1082;</span></h2>
 <div class="mw-translate-fuzzy">
@@ -152,13 +148,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191637
+Cached time: 20260111191743
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.229 seconds
-Preprocessor visited node count: 299/1000000
+CPU time usage: 0.120 seconds
+Real time usage: 0.334 seconds
+Preprocessor visited node count: 298/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -168,17 +164,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.007      1 -total
- 32.66%    4.902      1 Template:Userdocnavi/bg
- 15.83%    2.376      1 Template:Navigation_menu_2
- 14.01%    2.102      1 Template:TOCright
- 13.49%    2.024      2 Template:VersionMinus
- 11.93%    1.790      1 Template:Button
- 10.49%    1.574      3 Template:Version
-  9.71%    1.457      7 Template:Incode
+100.00%   25.845      1 -total
+ 43.27%   11.182      1 Template:Userdocnavi/bg
+ 24.54%    6.343      1 Template:Navigation_menu_2
+ 12.14%    3.137      1 Template:Button
+ 11.48%    2.966      3 Template:Version
+ 10.41%    2.691      2 Template:VersionMinus
+ 10.38%    2.683      7 Template:Incode
+  6.65%    1.718      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191636 and revision id 1735821. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191743 and revision id 1735823. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
