--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -106,10 +106,7 @@
 </p><p><span id="Reference"></span>
 </p>
 <h2><span id=".D0.A1.D0.BF.D1.80.D0.B0.D0.B2.D0.BE.D1.87.D0.BD.D0.B8.D0.BA"></span><span class="mw-headline" id="&#1057;&#1087;&#1088;&#1072;&#1074;&#1086;&#1095;&#1085;&#1080;&#1082;">&#1057;&#1087;&#1088;&#1072;&#1074;&#1086;&#1095;&#1085;&#1080;&#1082;</span></h2>
-<div class="mw-translate-fuzzy">
-<pre><a href="../List_of_Commands.html" class="mw-redirect" title="List of Commands">&#1057;&#1087;&#1088;&#1072;&#1074;&#1086;&#1095;&#1085;&#1080;&#1082; &#1085;&#1072; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;&#1090;&#1077;</a>: &#1055;&#1098;&#1083;&#1077;&#1085; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1085;&#1072; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;&#1090;&#1077; &#1074; FreeCAD
-</pre>
-</div>
+<ul><li><a href="../List_of_Commands.html" class="mw-redirect" title="List of Commands">Commands Reference</a>: &#1055;&#1098;&#1083;&#1077;&#1085; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1085;&#1072; &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080; FreeCAD.</li></ul>
 <p><span id="Online_Help"></span>
 </p>
 <h2><span id=".D0.9E.D0.BD.D0.BB.D0.B0.D0.B9.D0.BD_.D0.9F.D0.BE.D0.BC.D0.BE.D1.89"></span><span class="mw-headline" id="&#1054;&#1085;&#1083;&#1072;&#1081;&#1085;_&#1055;&#1086;&#1084;&#1086;&#1097;">&#1054;&#1085;&#1083;&#1072;&#1081;&#1085; &#1055;&#1086;&#1084;&#1086;&#1097;</span></h2>
@@ -148,13 +145,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191743
+Cached time: 20260111192213
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.334 seconds
-Preprocessor visited node count: 298/1000000
+CPU time usage: 0.132 seconds
+Real time usage: 0.244 seconds
+Preprocessor visited node count: 297/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -164,17 +161,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.845      1 -total
- 43.27%   11.182      1 Template:Userdocnavi/bg
- 24.54%    6.343      1 Template:Navigation_menu_2
- 12.14%    3.137      1 Template:Button
- 11.48%    2.966      3 Template:Version
- 10.41%    2.691      2 Template:VersionMinus
- 10.38%    2.683      7 Template:Incode
-  6.65%    1.718      1 Template:TOCright
+100.00%   23.303      1 -total
+ 35.85%    8.353      1 Template:Userdocnavi/bg
+ 18.43%    4.295      1 Template:TOCright
+ 15.12%    3.524      7 Template:Incode
+ 13.90%    3.240      1 Template:Navigation_menu_2
+  9.85%    2.295      3 Template:Version
+  6.33%    1.475      1 Template:Button
+  6.27%    1.462      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191743 and revision id 1735823. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111192212 and revision id 1735825. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
