--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -110,11 +110,9 @@
 <p><span id="Online_Help"></span>
 </p>
 <h2><span id=".D0.9E.D0.BD.D0.BB.D0.B0.D0.B9.D0.BD_.D0.9F.D0.BE.D0.BC.D0.BE.D1.89"></span><span class="mw-headline" id="&#1054;&#1085;&#1083;&#1072;&#1081;&#1085;_&#1055;&#1086;&#1084;&#1086;&#1097;">&#1054;&#1085;&#1083;&#1072;&#1081;&#1085; &#1055;&#1086;&#1084;&#1086;&#1097;</span></h2>
-<div class="mw-translate-fuzzy">
-<p>&#1058;&#1086;&#1074;&#1072; &#1077; &#1086;&#1092;&#1080;&#1094;&#1080;&#1072;&#1083;&#1085;&#1072;&#1090;&#1072; FreeCAD &#1086;&#1085;&#1083;&#1072;&#1081;&#1085; &#1087;&#1086;&#1084;&#1086;&#1097;. &#1048;&#1084;&#1072;&#1081;&#1090;&#1077; &#1074;&#1087;&#1088;&#1077;&#1076;&#1074;&#1080;&#1076; &#1095;&#1077; &#1094;&#1103;&#1083;&#1072;&#1090;&#1072; &#1086;&#1085;&#1083;&#1072;&#1081;&#1085; &#1087;&#1086;&#1084;&#1086;&#1097; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1089;&#1077; &#1087;&#1088;&#1077;&#1088;&#1072;&#1073;&#1086;&#1090;&#1074;&#1072;. &#1065;&#1077; &#1073;&#1098;&#1076;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1072; &#1079;&#1072; &#1075;&#1077;&#1085;&#1077;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1092;&#1083;&#1072;&#1081;&#1085; &#1087;&#1086;&#1084;&#1086;&#1097; (.CHM &#1092;&#1072;&#1081;&#1083;), &#1082;&#1086;&#1081;&#1090;&#1086; &#1097;&#1077; &#1089;&#1077; &#1088;&#1072;&#1079;&#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072; &#1089; FreeCAD. &#1042; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1086;&#1085;&#1083;&#1072;&#1081;&#1085; &#1087;&#1086;&#1084;&#1086;&#1097;&#1090;&#1072; &#1086;&#1073;&#1086;&#1073;&#1097;&#1072;&#1074;&#1072; &#1085;&#1072;&#1081;-&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077; &#1089;&#1077;&#1082;&#1094;&#1080;&#1080; &#1085;&#1072; &#1090;&#1086;&#1074;&#1072; &#1091;&#1080;&#1082;&#1080;.
+<p>&#1058;&#1086;&#1074;&#1072; &#1077; &#1086;&#1092;&#1080;&#1094;&#1080;&#1072;&#1083;&#1085;&#1072;&#1090;&#1072; &#1086;&#1085;&#1083;&#1072;&#1081;&#1085; &#1087;&#1086;&#1084;&#1086;&#1097; &#1085;&#1072; FreeCAD. &#1052;&#1086;&#1083;&#1103;, &#1080;&#1084;&#1072;&#1081;&#1090;&#1077; &#1087;&#1088;&#1077;&#1076;&#1074;&#1080;&#1076;, &#1095;&#1077; &#1094;&#1103;&#1083;&#1072;&#1090;&#1072; &#1086;&#1085;&#1083;&#1072;&#1081;&#1085; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1079;&#1072; &#1087;&#1086;&#1084;&#1086;&#1097; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1089;&#1077; &#1087;&#1088;&#1077;&#1088;&#1072;&#1073;&#1086;&#1090;&#1074;&#1072;. &#1058;&#1103; &#1097;&#1077; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1079;&#1072; &#1075;&#1077;&#1085;&#1077;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; . CHM &#1092;&#1072;&#1081;&#1083;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1097;&#1077; &#1073;&#1098;&#1076;&#1077; &#1088;&#1072;&#1079;&#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072;&#1085; &#1089; &#1076;&#1074;&#1086;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1087;&#1072;&#1082;&#1077;&#1090;&#1080; &#1085;&#1072; FreeCAD. &#1042; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1086;&#1085;&#1083;&#1072;&#1081;&#1085; &#1087;&#1086;&#1084;&#1086;&#1097;&#1090;&#1072; &#1086;&#1073;&#1086;&#1073;&#1097;&#1072;&#1074;&#1072; &#1085;&#1103;&#1082;&#1086;&#1080; &#1086;&#1090; &#1085;&#1072;&#1081;-&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083;&#1080; &#1085;&#1072; &#1090;&#1086;&#1074;&#1072; &#1091;&#1080;&#1082;&#1080;.
 </p>
-<ul><li><a href="../bg/Online_Help_Toc.html" title="Online Help Toc/bg"> &#1054;&#1085;&#1083;&#1072;&#1081;&#1085; &#1055;&#1086;&#1084;&#1086;&#1097; - &#1057;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;</a></li></ul>
-</div>
+<ul><li><a href="../Online_Help_Toc.html" title="Online Help Toc">Online help system - Table of Contents</a></li></ul>
 <p><span id="More"></span>
 </p>
 <h2><span id=".D0.9E.D1.89.D0.B5"></span><span class="mw-headline" id="&#1054;&#1097;&#1077;">&#1054;&#1097;&#1077;</span></h2>
@@ -143,13 +141,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111192340
+Cached time: 20260111192516
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.180 seconds
-Preprocessor visited node count: 296/1000000
+CPU time usage: 0.112 seconds
+Real time usage: 0.192 seconds
+Preprocessor visited node count: 295/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -159,17 +157,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.853      1 -total
- 46.10%    7.308      1 Template:Userdocnavi/bg
- 22.73%    3.603      1 Template:Navigation_menu_2
-  9.87%    1.565      1 Template:TOCright
-  9.77%    1.549      7 Template:Incode
-  9.11%    1.444      3 Template:Version
-  8.95%    1.419      1 Template:Button
-  8.52%    1.351      2 Template:VersionMinus
+100.00%   18.117      1 -total
+ 40.52%    7.341      1 Template:Userdocnavi/bg
+ 15.43%    2.795      1 Template:Navigation_menu_2
+ 15.00%    2.718      7 Template:Incode
+ 14.31%    2.593      1 Template:TOCright
+ 10.39%    1.883      3 Template:Version
+  6.77%    1.226      2 Template:VersionMinus
+  6.52%    1.181      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111192340 and revision id 1735829. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111192516 and revision id 1735831. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
