--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -116,13 +116,9 @@
 <p><span id="More"></span>
 </p>
 <h2><span id=".D0.9E.D1.89.D0.B5"></span><span class="mw-headline" id="&#1054;&#1097;&#1077;">&#1054;&#1097;&#1077;</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>&#1042; <a href="../Power_users_hub.html" title="Power users hub">&#1055;&#1086;&#1084;&#1086;&#1097; &#1079;&#1072; &#1085;&#1072;&#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1083;&#1080; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080;</a> &#1084;&#1086;&#1078;&#1077;&#1090;&#1077; &#1076;&#1072; &#1085;&#1072;&#1084;&#1077;&#1088;&#1080;&#1090;&#1077; &#1087;&#1086; &#1089;&#1083;&#1086;&#1078;&#1085;&#1072; &#1091;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072; &#1085;&#1072; FreeCAD</li>
-<li><a rel="nofollow" class="external text" href="http://yorik.orgfree.com/guestblog.php?2009=40">Architecture workflow</a>&nbsp;: &#1055;&#1088;&#1080;&#1084;&#1077;&#1088; &#1079;&#1072; &#1085;&#1072;&#1095;&#1072;&#1083;&#1085;&#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080; &#1074; &#1091;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;&#1090;&#1072; &#1085;&#1072; FreeCAD &#1074; &#1072;&#1088;&#1093;&#1080;&#1090;&#1077;&#1082;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072;</li>
-<li>&#1040;&#1082;&#1086; &#1080;&#1089;&#1082;&#1072;&#1090;&#1077; &#1076;&#1072; &#1087;&#1086;&#1084;&#1086;&#1075;&#1085;&#1077;&#1090;&#1077; &#1085;&#1072; FreeCAD, &#1087;&#1088;&#1086;&#1095;&#1077;&#1090;&#1077;&#1090;&#1077; <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a>.</li>
-<li><a href="../FreeCAD_Community_Portal.html" title="FreeCAD Community Portal">&#1055;&#1086;&#1088;&#1090;&#1072;&#1083;&#1098;&#1090; &#1085;&#1072; &#1054;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090;&#1090;&#1072; &#1085;&#1072; FreeCAD</a> &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1088;&#1086;&#1082;&#1090;&#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1086;&#1090; &#1076;&#1088;&#1091;&#1075;&#1080; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; &#1085;&#1072; FreeCAD</li>
-<li>&#1040;&#1082;&#1086; &#1085;&#1077; &#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1090;&#1077; &#1090;&#1077;&#1088;&#1084;&#1080;&#1085; &#1086;&#1090; FreeCAD &#1074;&#1080;&#1078;&#1090;&#1077; &#1085;&#1072;&#1096;&#1080;&#1103; <a href="../Glossary.html" title="Glossary">&#1056;&#1077;&#1095;&#1085;&#1080;&#1082;</a>.</li></ul>
-</div>
+<ul><li><a href="../Power_users_hub.html" title="Power users hub">Power user hub</a> &#1077; &#1084;&#1103;&#1089;&#1090;&#1086;&#1090;&#1086;, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1076;&#1072; &#1086;&#1090;&#1080;&#1076;&#1077;&#1090;&#1077;, &#1072;&#1082;&#1086; &#1080;&#1089;&#1082;&#1072;&#1090;&#1077; &#1076;&#1072; &#1074;&#1080;&#1076;&#1080;&#1090;&#1077; &#1087;&#1086;-&#1089;&#1083;&#1086;&#1078;&#1085;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; FreeCAD.</li>
+<li>&#1055;&#1086;&#1088;&#1090;&#1072;&#1083;&#1098;&#1090; <a href="../FreeCAD_Community_Portal.html" title="FreeCAD Community Portal">FreeCAD Community Portal</a> &#1087;&#1086;&#1089;&#1086;&#1095;&#1074;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1080;, &#1085;&#1072;&#1087;&#1088;&#1072;&#1074;&#1077;&#1085;&#1080; &#1086;&#1090; &#1095;&#1083;&#1077;&#1085;&#1086;&#1074;&#1077; &#1085;&#1072; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090;&#1090;&#1072; &#1086;&#1082;&#1086;&#1083;&#1086; FreeCAD.</li>
+<li>&#1053;&#1077; &#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1090;&#1077; &#1090;&#1077;&#1088;&#1084;&#1080;&#1085; &#1080;&#1083;&#1080; &#1092;&#1088;&#1072;&#1079;&#1072;, &#1082;&#1072;&#1082;&#1090;&#1086; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1074;&#1098;&#1074; FreeCAD? &#1054;&#1087;&#1080;&#1090;&#1072;&#1081;&#1090;&#1077; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;&#1090;&#1072; <a href="../Glossary.html" title="Glossary">Glossary</a>.</li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -141,13 +137,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111192516
+Cached time: 20260111192739
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.192 seconds
-Preprocessor visited node count: 295/1000000
+CPU time usage: 0.101 seconds
+Real time usage: 0.136 seconds
+Preprocessor visited node count: 294/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -157,17 +153,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.117      1 -total
- 40.52%    7.341      1 Template:Userdocnavi/bg
- 15.43%    2.795      1 Template:Navigation_menu_2
- 15.00%    2.718      7 Template:Incode
- 14.31%    2.593      1 Template:TOCright
- 10.39%    1.883      3 Template:Version
-  6.77%    1.226      2 Template:VersionMinus
-  6.52%    1.181      1 Template:Button
+100.00%   12.220      1 -total
+ 43.34%    5.296      1 Template:Userdocnavi/bg
+ 18.65%    2.279      1 Template:Navigation_menu_2
+ 12.30%    1.503      7 Template:Incode
+  9.83%    1.201      2 Template:VersionMinus
+  9.63%    1.177      3 Template:Version
+  9.13%    1.116      1 Template:TOCright
+  8.73%    1.067      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111192516 and revision id 1735831. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111192738 and revision id 1735833. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
