--- a/wiki/bg/About_FreeCAD.html
+++ b/wiki/bg/About_FreeCAD.html
@@ -23,13 +23,11 @@
 <li><a href="../zh-tw/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--low" title="&#38364;&#26044; FreeCAD (7% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
 <li><a href="../ja/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="FreeCAD&#12395;&#12388;&#12356;&#12390; (60% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD&#50640; &#45824;&#54644; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Online_Help_Startpage.html" title="Online Help Startpage">Online Help Startpage</a></div>
     <div><a href="../Feature_list.html" title="Feature list">Feature list</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../bg/Online_Help_Toc.html" title="Online Help Toc/bg">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-</div>
 </div>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Freecad_default.jpg&amp;filetimestamp=20130925032446&amp;.html" class="mw-file-description"><img src="../File/Freecad_default.jpg" decoding="async" width="1024" height="604" class="mw-file-element" data-file-width="1564" data-file-height="922"></a><figcaption></figcaption></figure> 
 <p><b>FreeCAD</b> &#1077; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088; &#1079;&#1072; 3D <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CAD"><b>CAD</b></a> &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1086; &#1084;&#1086;&#1076;&#1077;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1079;&#1072; &#1086;&#1073;&#1097;&#1080; &#1094;&#1077;&#1083;&#1080; &#1089; &#1086;&#1090;&#1074;&#1086;&#1088;&#1077;&#1085; &#1082;&#1086;&#1076; ( <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_source">open source</a>) &#1083;&#1080;&#1094;&#1077;&#1085;&#1079;&#1080;&#1088;&#1072;&#1085; &#1087;&#1086;&#1076; <a href="../License.html" title="License">LGPL License</a>. FreeCAD &#1077; &#1085;&#1072;&#1089;&#1086;&#1095;&#1077;&#1085; &#1087;&#1088;&#1103;&#1082;&#1086; &#1082;&#1098;&#1084; &#1080;&#1085;&#1078;&#1077;&#1085;&#1077;&#1088;&#1085;&#1086; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; (<a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Mechanical_engineering">mechanical engineering</a>) &#1080; &#1076;&#1080;&#1079;&#1072;&#1081;&#1085; &#1085;&#1072; &#1080;&#1079;&#1076;&#1077;&#1083;&#1080;&#1103; (<a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Product_design">product design</a>), &#1085;&#1086; &#1073;&#1080;&#1076;&#1077;&#1081;&#1082;&#1080; &#1084;&#1085;&#1086;&#1075;&#1086; &#1091;&#1085;&#1080;&#1074;&#1077;&#1088;&#1089;&#1072;&#1083;&#1077;&#1085; &#1087;&#1086;&#1076;&#1093;&#1086;&#1078;&#1076;&#1072; &#1079;&#1072; &#1084;&#1085;&#1086;&#1075;&#1086; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; &#1080;&#1085;&#1078;&#1077;&#1085;&#1077;&#1088;&#1080;, &#1072;&#1088;&#1093;&#1080;&#1090;&#1077;&#1082;&#1090;&#1080;, &#1080;&#1079;&#1089;&#1083;&#1077;&#1076;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1080; &#1087;&#1088;&#1086;&#1074;&#1077;&#1078;&#1076;&#1072;&#1097;&#1080; &#1072;&#1085;&#1072;&#1083;&#1080;&#1079; &#1085;&#1072; &#1082;&#1088;&#1072;&#1081;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1087;&#1088;&#1080; 3D &#1087;&#1088;&#1080;&#1085;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1080; &#1084;&#1085;&#1086;&#1075;&#1086; &#1076;&#1088;&#1091;&#1075;&#1080; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080;.
@@ -75,13 +73,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111160242
+Cached time: 20260111193240
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.098 seconds
-Real time usage: 0.180 seconds
-Preprocessor visited node count: 137/1000000
+CPU time usage: 0.075 seconds
+Real time usage: 0.166 seconds
+Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 6988/2097152 bytes
 Template argument size: 2217/2097152 bytes
 Highest expansion depth: 5/100
@@ -91,13 +89,13 @@ Unstrip post&#8208;expand size: 4223/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.309      1 -total
- 73.63%    6.118      1 Template:Userdocnavi/bg
- 26.72%    2.220      1 Template:Navigation_menu_2
- 24.20%    2.011      2 Template:Docnav
+100.00%   12.520      1 -total
+ 74.65%    9.346      1 Template:Userdocnavi/bg
+ 36.53%    4.573      1 Template:Navigation_menu_2
+ 23.43%    2.934      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111160242 and revision id 1733841. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193239 and revision id 1735835. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
