--- a/wiki/bg/About_FreeCAD.html
+++ b/wiki/bg/About_FreeCAD.html
@@ -41,10 +41,9 @@
 <h3><span id=".D0.97.D0.B0_.D0.BF.D1.80.D0.BE.D0.B5.D0.BA.D1.82.D0.B0_FreeCAD"></span><span class="mw-headline" id="&#1047;&#1072;_&#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072;_FreeCAD">&#1047;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; FreeCAD</span></h3>
 <p>&#1055;&#1088;&#1086;&#1077;&#1082;&#1090;&#1098;&#1090; FreeCAD &#1077; &#1089;&#1090;&#1072;&#1088;&#1090;&#1080;&#1088;&#1072;&#1085; &#1086;&#1097;&#1077; &#1087;&#1088;&#1077;&#1079; 2001 &#1075;., &#1082;&#1072;&#1082;&#1090;&#1086; &#1077; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1086; &#1085;&#1072; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;&#1090;&#1072; <a href="../History.html" title="History">history</a>. 
 </p><p>FreeCAD &#1089;&#1077; &#1087;&#1086;&#1076;&#1076;&#1098;&#1088;&#1078;&#1072; &#1080; &#1088;&#1072;&#1079;&#1074;&#1080;&#1074;&#1072; &#1086;&#1090; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090; &#1086;&#1090; &#1077;&#1085;&#1090;&#1091;&#1089;&#1080;&#1072;&#1089;&#1090;&#1080; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1080;&#1089;&#1090;&#1080; &#1080; &#1087;&#1086;&#1088;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (&#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;&#1090;&#1072; <a href="../Contributors.html" title="Contributors">contributors</a> &#1079;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;). &#1058;&#1077; &#1088;&#1072;&#1073;&#1086;&#1090;&#1103;&#1090; &#1074;&#1098;&#1088;&#1093;&#1091; FreeCAD &#1085;&#1072; &#1076;&#1086;&#1073;&#1088;&#1086;&#1074;&#1086;&#1083;&#1085;&#1080; &#1085;&#1072;&#1095;&#1077;&#1083;&#1072; &#1074; &#1089;&#1074;&#1086;&#1073;&#1086;&#1076;&#1085;&#1086;&#1090;&#1086; &#1089;&#1080; &#1074;&#1088;&#1077;&#1084;&#1077;. &#1058;&#1077; &#1085;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1075;&#1072;&#1088;&#1072;&#1085;&#1090;&#1080;&#1088;&#1072;&#1090; &#1095;&#1077; FreeCAD &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1080;&#1083;&#1080; &#1097;&#1077; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1086; &#1082;&#1086;&#1077;&#1090;&#1086; &#1097;&#1077; &#1078;&#1077;&#1083;&#1072;&#1090;&#1077;, &#1085;&#1086; &#1097;&#1077; &#1085;&#1072;&#1087;&#1088;&#1072;&#1074;&#1103;&#1090; &#1074;&#1089;&#1080;&#1095;&#1082;&#1086; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1087;&#1086; &#1074;&#1098;&#1087;&#1088;&#1086;&#1089;&#1072;! &#1054;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090;&#1072; &#1089;&#1077; &#1089;&#1098;&#1073;&#1080;&#1088;&#1072; &#1085;&#1072; <a rel="nofollow" class="external text" href="http://forum.freecad.org">FreeCAD &#1092;&#1086;&#1088;&#1091;&#1084;-&#1072;</a>, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1089;&#1077; &#1086;&#1073;&#1089;&#1098;&#1078;&#1076;&#1072;&#1090; &#1080;&#1076;&#1077;&#1080; &#1080; &#1089;&#1077; &#1074;&#1079;&#1080;&#1084;&#1072;&#1090; &#1088;&#1077;&#1096;&#1077;&#1085;&#1080;&#1103;. &#1050;&#1072;&#1085;&#1080;&#1084; &#1074;&#1080; &#1076;&#1072; &#1089;&#1077; &#1087;&#1088;&#1080;&#1089;&#1098;&#1077;&#1076;&#1080;&#1085;&#1080;&#1090;&#1077; &#1082;&#1098;&#1084; &#1085;&#1072;&#1089;!
+</p><p><span id="About_the_FPA"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="About_the_FPA">About the FPA</span></h3>
-</div>
+<h3><span id=".D0.9E.D1.82.D0.BD.D0.BE.D1.81.D0.BD.D0.BE_FPA"></span><span class="mw-headline" id="&#1054;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086;_FPA">&#1054;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; FPA</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The FreeCAD project is also supported by a non-profit organization, the <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FreeCAD project association (FPA)</a>. The FPA is an independent body created by some FreeCAD veterans in 2021 to collect <a href="../Donate.html" title="Donate">donations</a> and other resources to support the project and its community, to help protect that community and allow it to continue developing in the best conditions, and to represent the project against other bodies such as companies and institutions.
 </p>
@@ -73,12 +72,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111193240
+Cached time: 20260111193344
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.075 seconds
-Real time usage: 0.166 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.141 seconds
 Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 6988/2097152 bytes
 Template argument size: 2217/2097152 bytes
@@ -89,13 +88,13 @@ Unstrip post&#8208;expand size: 4223/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.520      1 -total
- 74.65%    9.346      1 Template:Userdocnavi/bg
- 36.53%    4.573      1 Template:Navigation_menu_2
- 23.43%    2.934      2 Template:Docnav
+100.00%    9.403      1 -total
+ 73.07%    6.871      1 Template:Userdocnavi/bg
+ 28.71%    2.699      1 Template:Navigation_menu_2
+ 24.78%    2.330      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193239 and revision id 1735835. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193344 and revision id 1735839. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
