--- a/wiki/bg/About_FreeCAD.html
+++ b/wiki/bg/About_FreeCAD.html
@@ -44,8 +44,8 @@
 </p><p><span id="About_the_FPA"></span>
 </p>
 <h3><span id=".D0.9E.D1.82.D0.BD.D0.BE.D1.81.D0.BD.D0.BE_FPA"></span><span class="mw-headline" id="&#1054;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086;_FPA">&#1054;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; FPA</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The FreeCAD project is also supported by a non-profit organization, the <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FreeCAD project association (FPA)</a>. The FPA is an independent body created by some FreeCAD veterans in 2021 to collect <a href="../Donate.html" title="Donate">donations</a> and other resources to support the project and its community, to help protect that community and allow it to continue developing in the best conditions, and to represent the project against other bodies such as companies and institutions.
+<div class="mw-translate-fuzzy">
+<p>&#1055;&#1088;&#1086;&#1077;&#1082;&#1090;&#1098;&#1090; FreeCAD &#1089;&#1077; &#1087;&#1086;&#1076;&#1082;&#1088;&#1077;&#1087;&#1103; &#1080; &#1086;&#1090; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1072;&#1094;&#1080;&#1103; &#1089; &#1085;&#1077;&#1089;&#1090;&#1086;&#1087;&#1072;&#1085;&#1089;&#1082;&#1072; &#1094;&#1077;&#1083;, <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FreeCAD project association (FPA)</a>. FPA &#1077; &#1085;&#1077;&#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084; &#1086;&#1088;&#1075;&#1072;&#1085;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085; &#1086;&#1090; &#1085;&#1103;&#1082;&#1086;&#1080; &#1074;&#1077;&#1090;&#1077;&#1088;&#1072;&#1085;&#1080; &#1085;&#1072; FreeCAD &#1087;&#1088;&#1077;&#1079; 2021 &#1075;., &#1079;&#1072; &#1076;&#1072; &#1089;&#1098;&#1073;&#1080;&#1088;&#1072; [[donate|&#1076;&#1072;&#1088;&#1077;&#1085;&#1080;&#1103;] &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1088;&#1077;&#1089;&#1091;&#1088;&#1089;&#1080; &#1074; &#1087;&#1086;&#1076;&#1082;&#1088;&#1077;&#1087;&#1072; &#1085;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1080; &#1085;&#1077;&#1075;&#1086;&#1074;&#1072;&#1090;&#1072; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090;, &#1076;&#1072; &#1087;&#1086;&#1084;&#1086;&#1075;&#1085;&#1077; &#1079;&#1072; &#1079;&#1072;&#1097;&#1080;&#1090;&#1072;&#1090;&#1072; &#1085;&#1072; &#1090;&#1072;&#1079;&#1080; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090; &#1080; &#1076;&#1072; &#1117; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1080; &#1076;&#1072; &#1087;&#1088;&#1086;&#1076;&#1098;&#1083;&#1078;&#1080; &#1076;&#1072; &#1089;&#1077; &#1088;&#1072;&#1079;&#1074;&#1080;&#1074;&#1072; &#1074; &#1085;&#1072;&#1081;-&#1076;&#1086;&#1073;&#1088;&#1080;&#1090;&#1077; &#1091;&#1089;&#1083;&#1086;&#1074;&#1080;&#1103; &#1080; &#1076;&#1072; &#1087;&#1088;&#1077;&#1076;&#1089;&#1090;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1089;&#1088;&#1077;&#1097;&#1091; &#1076;&#1088;&#1091;&#1075;&#1080; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080; &#1082;&#1072;&#1090;&#1086; &#1082;&#1086;&#1084;&#1087;&#1072;&#1085;&#1080;&#1080; &#1080; &#1080;&#1085;&#1089;&#1090;&#1080;&#1090;&#1091;&#1094;&#1080;&#1080;.
 </p>
 </div>
 <p><br>
@@ -72,12 +72,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111193344
+Cached time: 20260111193547
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.073 seconds
-Real time usage: 0.141 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.181 seconds
 Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 6988/2097152 bytes
 Template argument size: 2217/2097152 bytes
@@ -88,13 +88,13 @@ Unstrip post&#8208;expand size: 4223/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.403      1 -total
- 73.07%    6.871      1 Template:Userdocnavi/bg
- 28.71%    2.699      1 Template:Navigation_menu_2
- 24.78%    2.330      2 Template:Docnav
+100.00%   18.342      1 -total
+ 70.40%   12.913      1 Template:Userdocnavi/bg
+ 30.80%    5.650      1 Template:Navigation_menu_2
+ 28.60%    5.246      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193344 and revision id 1735839. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193547 and revision id 1735841. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
